manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wx-jyy
  namespace: wx-jyy
  labels:
    app: wx-jyy
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: wx-jyy
