manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wx-jyy
  namespace: wx-jyy
spec:
  ingressClassName: nginx
  rules:
    - host: wx-jyy.changhai.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wx-jyy
                port:
                  number: 80
    - host: wx-jyy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wx-jyy
                port:
                  number: 80
    - host: www.wx-jyy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wx-jyy
                port:
                  number: 80
